ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration12/input.ts.stderr
error: A `set` accessor must have a corresponding `get` accessor
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration12/input.ts:3:4
  |
3 |    get Foo(a: number) { }
  |    ^^^

